fix(news): use URI instead of the deprecated URL constructor